force-app/main/default/objects/copado__Kanban_Board__c/copado__Kanban_Board__c.object-meta.xml
<CustomObject>
    <description>The Kanban board editor allows admins to define the Kanban board definition, giving users complete flexibility on the Kanban board function and usage.  Any object can be queried and any picklist or lookup field can be updated.</description>
    <label>Kanban Board</label>
    <nameField>
        <label>Kanban Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>