force-app/main/default/objects/copado__Kanban_Board__c/fields/copado__Field_to_read_update__c.field-meta.xml
<CustomField>
    <fullName>copado__Field_to_read_update__c</fullName>
    <inlineHelpText>Field to read/update for each Item. In &quot;object.field&quot; format</inlineHelpText>
    <label>Field to read/update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>