force-app/main/default/objects/copado__Kanban_Board__c/fields/copado__SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>copado__SOQL_Query__c</fullName>
    <inlineHelpText>SOQL Query to retrieve each Id, Title (second field in the query), and the &quot;Status&quot; field, as defined in Field to read/update. Every other field will be shown as the text content of the item.</inlineHelpText>
    <label>SOQL Query</label>
    <length>20480</length>
    <type>LongTextArea</type>
</CustomField>