force-app/main/default/objects/copado__Kanban_Board__c/fields/copado__Sprint__c.field-meta.xml
<CustomField>
    <fullName>copado__Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>copado__Sprint__c</referenceTo>
    <relationshipLabel>Kanban Boards</relationshipLabel>
    <relationshipName>Kanban_Boards</relationshipName>
    <type>Lookup</type>
</CustomField>