force-app/main/default/objects/copado__Kanban_Board__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Field_to_read_update__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>